--- a/about-us.html
+++ b/about-us.html
@@ -13,8 +13,8 @@
 		<h1>Flower Shop</h1>
 		<input type="text" name="search">
 		<button id="home">Home</button>
-		<button>Gifts & Balloons</button>
-		<button>Flower</button>
+		<button id="Flower">Flower</button>
+		<button id="extra">Gifts & Balloons</button>
 		<button id ="our-community">Our Community</button>
 		<button id="about-us">About Us</button>
 	</header>
