--- a/index-1-.html
+++ b/index-1-.html
@@ -12,30 +12,29 @@
   src="https://code.jquery.com/jquery-3.5.1.min.js"
   integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
   crossorigin="anonymous"></script>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
-	<header>
-		<p>Flower Shop</p>
-		<label>Email</label>
-		<input type="email" name="email">
-		<label>password</label>
-		<input type="password" name="password">
+<body id="body1">
+	<header id ="header1">
+		<p style="font-size: 50px">Flower Shop</p>
+		<label>Email</label><br>
+		<input type="email" id="email"><br>
+		<label>password</label><br>
+		<input type="password" id="password"><br>
 		<button id="log">log In</button>
 	</header>
-	<main>
-        <p>Create your own flower bouquet ...</p>
-        <button id="start-button"style="margin-left: 200px;margin-top:20px;font-size:50px">Let's start !</button>
+	<main id ="mainborder">
+        <p style="margin-left: 50px;margin-top:-100px;font-size:50px">Create your own flower bouquet ...</p>
+        <button id="start-button"style="margin-left: 275px;margin-top:20px;font-size:50px">Let's start !</button>
     </main>
-    <footer>
+    <footer id="footer1">
     	<h1>Contact Us :</h1>
     	<h2><!-- You can call(9AM-10PM)<br> -->+962 782200715</h2>
     	<h3>nh.yu.mo@hotmail.com</h3>
-    	<a href="file:///C:/Users/Toshiba/Desktop/solo-project-1/about-us.html"style="color: red"><h4>Our Location</h4></a>
+    	<a href="file:///C:/Users/Toshiba/Desktop/solo-project-1/about-us.html"style="color: black"><h4>Our Location</h4></a>
     </footer>
 
 
 <script type="text/javascript"src="main-1-.js"></script>
 </body>
 </html>
-
-<!-- // CSS // style="margin-left: 350px; margin-top:200px;font-size: 50px;background-image: url('https://images.squarespace-cdn.com/content/v1/58c9a1a5d1758e7bb29f1cf5/1587487972000-VNKPFGZ4Q55CSP5LZE3J/ke17ZwdGBToddI8pDm48kLkXF2pIyv_F2eUT9F60jBl7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z4YTzHvnKhyp6Da-NYroOW3ZGjoBKy3azqku80C789l0iyqMbMesKd95J-X4EagrgU9L3Sa3U8cogeb0tjXbfawd0urKshkc5MgdBeJmALQKw/28399+%281%29.jpg?format=1500w')
