--- a/about-us.html
+++ b/about-us.html
@@ -10,21 +10,25 @@
 </head>
 <body>
 	<header>
-		<h1>Flower Shop</h1>
-		<input type="text" name="search">
+		<h1 id="title">Flower Shop</h1>
+		<input type="text" id="search">
+		<button id="searchButton">Search</button>
+	</header>
+	<nav id ="nav">
 		<button id="home">Home</button>
 		<button id="Flower">Flower</button>
 		<button id="extra">Gifts & Balloons</button>
 		<button id ="our-community">Our Community</button>
 		<button id="about-us">About Us</button>
-	</header>
-    <main>
+
+	</nav>
+    <main id="main-aboutUs">
     	<h2>Welcome to Flower Shop ..</h2>
     	<p>Here you will find the perfect , unique gift and made exactly for whom you love .</p>
     	<h3>You can find us here ..</h3>
     	<img src="https://lh3.googleusercontent.com/proxy/yktvQZqLHv0lmXa70S2xQJjwz_YlIg2JfZ2QngweIATOe4y--kt7PTuJ6FPeP5lslGQTFk9DZ1Rou2G5MplczjFuSXxiE-yIKvsv3QKk">
     </main>
-    <footer>
+    <footer id="footer"style="margin-top:-130px ">
     	<h1>Contact Us :</h1>
     	<h2><!-- You can call(9AM-10PM)<br> -->+962 782200715</h2>
     	<h3>nh.yu.mo@hotmail.com</h3>
