--- a/our-community.html
+++ b/our-community.html
@@ -10,15 +10,18 @@
 </head>
 <body>
 	<header>
-		<h1>Flower Shop</h1>
-		<input type="text" name="search">
+		<h1 id="title">Flower Shop</h1>
+		<input type="text" id="search">
+		<button id="searchButton">Search</button>
+	</header>
+	<nav id ="nav">
 		<button id="home">Home</button>
 		<button id="Flower">Flower</button>
 		<button id="extra">Gifts & Balloons</button>
 		<button id ="our-community">Our Community</button>
 		<button id="about-us">About Us</button>
-	</header>
-	<main>
+
+	</nav>
 		<p>Share your feedback with us ...</p>
 		<input type="text" id="feedback">
 		<button id="addFeedback">Add</button>
@@ -26,11 +29,11 @@
 			
 		</ul>
 	</main>
-	<footer>
+	<footer id="footer">
     	<h1>Contact Us :</h1>
     	<h2><!-- You can call(9AM-10PM)<br> -->+962 782200715</h2>
     	<h3>nh.yu.mo@hotmail.com</h3>
-    	<a href="file:///C:/Users/Toshiba/Desktop/solo-project-1/about-us.html"style="color: red"><h4>Our Location</h4></a>
+    	<a href="file:///C:/Users/Toshiba/Desktop/solo-project-1/about-us.html"style="color:#E57373"><h4>Our Location</h4></a>
     </footer>
 
 <script type="text/javascript"src="main-1-.js"></script>
