--- a/home2.html
+++ b/home2.html
@@ -37,6 +37,18 @@
 	</select>
 		<button id="select-Occasions">select</button>  
 	</div>
+	<div id="color">
+	<label id ="colorTitel" style="font-size: 40px">Choose The Color : </label><br><br><br>
+	<select style="font-size: 20px">
+		<option>Red</option>
+		<option>Pink</option>
+		<option>White</option>
+		<option>Yellow</option>
+		<option>Mix</option>
+	</select>
+		<button id="select-Occasions">select</button>  
+	</div>
+
 	<footer id="footer">
     	<h1>Contact Us :</h1>
     	<h2><!-- You can call(9AM-10PM)<br> -->+962 782200715</h2>
