--- a/index-0-.html
+++ b/index-0-.html
@@ -25,7 +25,7 @@
 	</header>
 	<main id ="mainborder">
         <p style="margin-left: 50px;margin-top:-100px;font-size:50px">Create your own flower bouquet ...</p>
-       <!--  <button id="start-button"style="margin-left: 275px;margin-top:20px;font-size:50px">Let's start !</button> -->
+        <button id="start-button"style="margin-left: 275px;margin-top:20px;font-size:50px">Let's start !</button>
     </main>
     <footer id="footer1">
     	<h1>Contact Us :</h1>
