--- a/Gifts&Balloons.html
+++ b/Gifts&Balloons.html
@@ -23,12 +23,19 @@
 		<button id="about-us">About Us</button>
 
 	</nav>
-	<main>
-		  
-
-
-
-	</main>
+	 <p style="margin-left:450px;font-weight: bold;font-size: 30px;">You Can Also Add ... </p>   
+	 <div id="imgred">
+	  <ul><br><br>
+        <img id ="mouseon" src="https://img3.goodfon.com/wallpaper/nbig/f/e1/amazing-beautiful-beauty.jpg"style="width: 450px;height: 250px">
+        <P style ="margin-left: 150px;font-size: 20px">Chocolate<button class="addtooo"style="margin-left: 100px;background-color:#E57373">Add</button></P>
+      </ul>
+    </div>
+    	 <div id="imgred">
+	  <ul><br><br>
+        <img id ="mouseon" src="https://images.pexels.com/photos/574282/pexels-photo-574282.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"style="width: 450px;height: 250px">
+        <P style ="margin-left: 150px;font-size: 20px">Balloons<button class="addtooo"style="margin-left: 100px;background-color:#E57373">Add</button></P>
+      </ul>
+    </div>
 	<footer id="footer">
     	<h1>Contact Us :</h1>
     	<h2><!-- You can call(9AM-10PM)<br> -->+962 782200715</h2>
