--- a/flower.html
+++ b/flower.html
@@ -23,18 +23,33 @@
 		<button id="about-us">About Us</button>
 
 	</nav>
-<div id="FlowerSelect">
+	<div id ="laaast">
+		<p>Choose The Color : </p>
+		<button id="colorYellow" style="background-color: yellow;font-size: 40px">Yellow</button>
+		<button id="colorPink" style="background-color: pink;font-size: 40px;margin-left: 100px">Pink</button><br><br>
+		<button id="colorWhite" style="background-color:white;font-size: 40px">White</button>
+		<button id="colorRed" style="background-color: red;font-size: 40px;margin-left: 113px">Red</button><br><br>
+		<button id="colorMix" style="background-color: #873AC5 ;font-size: 40px;margin-left: 145px">Mix</button>
+	</div>
+<!-- <div id="FlowerSelect">
 	<label id ="flowerTitel" style="font-size: 35px">Choose The Color : </label><br><br><br>
-	<select style="font-size: 15px">
+	<select id ="check-color"; style="font-size: 15px">
 		<option>Red</option>
 		<option>Pink</option>
 		<option>White</option>
 		<option>Yellow</option>
 		<option>Mix</option>
 	</select>
-		<button id="select-Occasions">select</button>  
+		<button id="select-Color">select</button>  
 	</div>
-	<footer id="footer">
+	<div id ="colorList">
+		<ul id= "Red"></ul>
+		<ul id= "Pink"></ul>
+		<ul id= "White"></ul>
+		<ul id= "Yellow"></ul>
+        <ul id= "Mix"></ul>
+	</div> -->
+	<footer id="footer"style="margin-top:-70px ">
     	<h1>Contact Us :</h1>
     	<h2><!-- You can call(9AM-10PM)<br> -->+962 782200715</h2>
     	<h3>nh.yu.mo@hotmail.com</h3>
