--- a/home.html
+++ b/home.html
@@ -37,7 +37,7 @@
 	</select>
 		<button id="select-Occasions">select</button>  
 	</div>
-	<footer id="footer">
+	<footer id="footer"style="margin-top: 100px">
     	<h1>Contact Us :</h1>
     	<h2><!-- You can call(9AM-10PM)<br> -->+962 782200715</h2>
     	<h3>nh.yu.mo@hotmail.com</h3>
