--- a/home2.html
+++ b/home2.html
@@ -46,7 +46,7 @@
 		<option>Yellow</option>
 		<option>Mix</option>
 	</select>
-		<button id="select-Occasions">select</button>  
+		<button id="select-Color">select</button>  
 	</div>
 
 	<footer id="footer">
