--- a/index-0-.html
+++ b/index-0-.html
@@ -14,20 +14,20 @@
   crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body id="body1">
-	<header id ="header1">
+<body id="body1"style="margin-top: 225px">
+<!-- 	<header id ="header1">
 		<p style="font-size: 50px">Flower Shop</p>
 		<label>Email</label><br>
 		<input type="email" id="email"><br>
 		<label>password</label><br>
 		<input type="password" id="password"><br>
 		<button id="log">log In</button>
-	</header>
+	</header> -->
 	<main id ="mainborder">
-        <p style="margin-left: 50px;margin-top:-100px;font-size:50px">Create your own flower bouquet ...</p>
-        <button id="start-button"style="margin-left: 275px;margin-top:20px;font-size:50px">Let's start !</button>
+        <p style="font-size:40px">Create your own flower bouquet ...</p>
     </main>
-    <footer id="footer1">
+ <button id="start-button"style="margin-left: 550px;margin-top:80px;font-size:50px;margin-bottom:-500px ">Let's start !</button>
+    <footer id="footer1"style="margin-top: 175px">
     	<h1>Contact Us :</h1>
     	<h2><!-- You can call(9AM-10PM)<br> -->+962 782200715</h2>
     	<h3>nh.yu.mo@hotmail.com</h3>
