--- a/index-1-.html
+++ b/index-1-.html
@@ -24,7 +24,7 @@
 		<button id="log">log In</button>
 	</header>
 	<main id ="mainborder">
-        <p style="margin-left: 50px;margin-top:-100px;font-size:50px">Create your own flower bouquet ...</p>
+        <p style="font-size: 40px">Create your own flower bouquet ...</p>
        <!--  <button id="start-button"style="margin-left: 275px;margin-top:20px;font-size:50px">Let's start !</button> -->
     </main>
     <footer id="footer1">
