--- a/lassst.html
+++ b/lassst.html
@@ -2,11 +2,12 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<script
   src="https://code.jquery.com/jquery-3.5.1.min.js"
   integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
   crossorigin="anonymous"></script>
-	<link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<header>
@@ -22,18 +23,18 @@
 		<button id="about-us">About Us</button>
 
 	</nav>
-	<div id="ourCommunity">
-		<p style="font-size: 30px">Share your feedback with us ...</p>
-		<input type="text" id="feedback">
-		<button id="addFeedback">Add</button>
-		<ul id="CommunityList">	
-		<li>I order this from you Beautiful</li><br>
-		<img src="https://cdn.shopify.com/s/files/1/1428/2106/products/37932218_2061367633934923_8500370711263576064_n_1024x1024.jpg?v=1535343914"style="width: 150px;height: 150px">
-		<li>your idea is very unique .. I love it <3</li><br>
-		</ul>
-
+	<div style="margin-left: 500px;margin-top: 100px;font-size: 20px">
+    <label>your location</label><br><br>
+    <input type="text" name=""><br><br>
+    <label>how you want to pay </label><br><br>
+    <select>	
+    	<option>chash</option>
+		<option>visa</option></select><br><br>
+    <label>your phone</label><br><br>
+    <input type="text" name=""><br><br>
+    <button  id="Save"style="margin-left: 150px;background-color:#E57373;font-size: 20px">Save</button>
     </div>
-	<footer id="footer"style="margin-top:-50px ">
+	<footer id="footer"style="margin-top: -60px">
     	<h1>Contact Us :</h1>
     	<h2><!-- You can call(9AM-10PM)<br> -->+962 782200715</h2>
     	<h3>nh.yu.mo@hotmail.com</h3>
