--- a/the-gift.html
+++ b/the-gift.html
@@ -2,11 +2,12 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<script
   src="https://code.jquery.com/jquery-3.5.1.min.js"
   integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
   crossorigin="anonymous"></script>
-	<link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<header>
@@ -22,18 +23,15 @@
 		<button id="about-us">About Us</button>
 
 	</nav>
-	<div id="ourCommunity">
-		<p style="font-size: 30px">Share your feedback with us ...</p>
-		<input type="text" id="feedback">
-		<button id="addFeedback">Add</button>
-		<ul id="CommunityList">	
-		<li>I order this from you Beautiful</li><br>
-		<img src="https://cdn.shopify.com/s/files/1/1428/2106/products/37932218_2061367633934923_8500370711263576064_n_1024x1024.jpg?v=1535343914"style="width: 150px;height: 150px">
-		<li>your idea is very unique .. I love it <3</li><br>
-		</ul>
-
+	 <p style="margin-left:450px;font-weight: bold;font-size: 30px;">Here is your gift ..</p>   
+	 <div id="imgred">
+	  <ul><br><br>
+        <img id ="mouseon" src="https://images.squarespace-cdn.com/content/v1/5b3bb88955b02ca270fb853b/1550153324331-DIKM5B1ZT5MH7JXYH252/ke17ZwdGBToddI8pDm48kK60W-ob1oA2Fm-j4E_9NQB7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z4YTzHvnKhyp6Da-NYroOW3ZGjoBKy3azqku80C789l0kD6Ec8Uq9YczfrzwR7e2Mh5VMMOxnTbph8FXiclivDQnof69TlCeE0rAhj6HUpXkw/ZKu0MxPGTBa%2B9lgv1a%2BkpQ.jpg?format=750w"style="width: 450px;height: 450px">
+        <P style ="margin-left: 150px;font-size: 20px"><button id="addtoooo"style="margin-left: 100px;background-color:#E57373">Finish</button></P>
+      </ul>
     </div>
-	<footer id="footer"style="margin-top:-50px ">
+
+	<footer id="footer">
     	<h1>Contact Us :</h1>
     	<h2><!-- You can call(9AM-10PM)<br> -->+962 782200715</h2>
     	<h3>nh.yu.mo@hotmail.com</h3>
