--- a/Gifts&Balloons.html
+++ b/Gifts&Balloons.html
@@ -36,7 +36,12 @@
         <P style ="margin-left: 150px;font-size: 20px">Balloons<button class="addtooo"style="margin-left: 100px;background-color:#E57373">Add</button></P>
       </ul>
     </div>
-	<footer id="footer">
+    	<div id="imgred">
+	  <ul><br><br>
+         <button class="addtooo"style="margin-left: 190px;background-color:#E57373;font-size: 30px">Skip</button>
+      </ul>
+    </div>    
+	<footer id="footer"style="margin-top: 70px">
     	<h1>Contact Us :</h1>
     	<h2><!-- You can call(9AM-10PM)<br> -->+962 782200715</h2>
     	<h3>nh.yu.mo@hotmail.com</h3>
@@ -46,3 +51,4 @@
 <script type="text/javascript"src="main-1-.js"></script>
 </body>
 </html>
+
