--- a/home2.html
+++ b/home2.html
@@ -38,7 +38,7 @@
 		<button id="select-Occasions">select</button>  
 	</div>
 	<div id="color">
-	<label id ="colorTitel" style="font-size: 40px">Choose The Color : </label><br><br><br>
+	<label id ="colorTitel" style="font-size: 40px">Choose Flower Color : </label><br><br><br>
 	<select style="font-size: 20px">
 		<option>Red</option>
 		<option>Pink</option>
