--- a/index-1-.html
+++ b/index-1-.html
@@ -23,11 +23,11 @@
 		<input type="password" id="password"><br>
 		<button id="log">log In</button>
 	</header>
-	<main id ="mainborder">
+<!-- 	<main id ="mainborder">
         <p style="font-size: 40px">Create your own flower bouquet ...</p>
-       <!--  <button id="start-button"style="margin-left: 275px;margin-top:20px;font-size:50px">Let's start !</button> -->
-    </main>
-    <footer id="footer1">
+        <button id="start-button"style="margin-left: 275px;margin-top:20px;font-size:50px">Let's start !</button>
+    </main> -->
+    <footer id="footer1"style="margin-top: 100px">
     	<h1>Contact Us :</h1>
     	<h2><!-- You can call(9AM-10PM)<br> -->+962 782200715</h2>
     	<h3>nh.yu.mo@hotmail.com</h3>
