--- a/lassst.html
+++ b/lassst.html
@@ -23,18 +23,18 @@
 		<button id="about-us">About Us</button>
 
 	</nav>
-	<div style="margin-left: 500px;margin-top: 100px;font-size: 20px">
-    <label>your location</label><br><br>
+	<div style="margin-left: 500px;margin-top: 100px;font-size: 30px;font-weight: bold">
+    <label>your location</label><br>
     <input type="text" name=""><br><br>
-    <label>how you want to pay </label><br><br>
-    <select>	
+    <label>how you want to pay </label><br>
+    <select style="margin-left: 10px">	
     	<option>chash</option>
 		<option>visa</option></select><br><br>
-    <label>your phone</label><br><br>
+    <label>your phone</label><br>
     <input type="text" name=""><br><br>
-    <button  id="Save"style="margin-left: 150px;background-color:#E57373;font-size: 20px">Save</button>
+    <button  id="Save"style="margin-left: 250px;background-color:#E57373;font-size: 20px">Save</button>
     </div>
-	<footer id="footer"style="margin-top: -60px">
+	<footer id="footer"style="margin-top: -100px">
     	<h1>Contact Us :</h1>
     	<h2><!-- You can call(9AM-10PM)<br> -->+962 782200715</h2>
     	<h3>nh.yu.mo@hotmail.com</h3>
