--- a/our-community.html
+++ b/our-community.html
@@ -22,13 +22,15 @@
 		<button id="about-us">About Us</button>
 
 	</nav>
-	<div id="ourCommunity">
+	<div style="margin-left: 480px">
 		<p style="font-size: 30px">Share your feedback with us ...</p>
 		<input type="text" id="feedback">
 		<button id="addFeedback">Add</button>
+		</div>
+	<div id="ourCommunity" style="font-size: 30px">
 		<ul id="CommunityList">	
 		<li>I order this from you Beautiful</li><br>
-		<img src="https://cdn.shopify.com/s/files/1/1428/2106/products/37932218_2061367633934923_8500370711263576064_n_1024x1024.jpg?v=1535343914"style="width: 150px;height: 150px">
+		<img src="https://cdn.shopify.com/s/files/1/1428/2106/products/37932218_2061367633934923_8500370711263576064_n_1024x1024.jpg?v=1535343914"style="width: 250px;height: 250px"><br>
 		<li>your idea is very unique .. I love it <3</li><br>
 		</ul>
 
