--- a/redFlower.html
+++ b/redFlower.html
@@ -24,7 +24,7 @@
 
 	</nav>  
     	<div id="imgred">
-	<p style="	font-weight: bold;font-size: 30px;">Choose design for your flower ... </p>
+	<p style="	font-weight: bold;font-size: 30px;">Choose The Type for your flower ... </p>
 	  <ul><br><br>
         <img id ="mouseon" src="https://scontent.famm8-1.fna.fbcdn.net/v/t1.15752-9/121060567_627554287941922_8255936205382046846_n.jpg?_nc_cat=102&_nc_sid=ae9488&_nc_eui2=AeHQDVzdNYAKcXAfDruxsJdUufIvtHJwLkC58i-0cnAuQBt6hywWPExiNKBTbYliG_ZEbUHKemZE5i6bdw61iUwd&_nc_ohc=d9TEouTrdYAAX-96Tlz&_nc_ht=scontent.famm8-1.fna&oh=434071735cc6c8d78da53b4a625b4515&oe=5FA33A7A"style="width: 450px;height: 250px">
         <P style ="margin-left: 150px;font-size: 20px">Name :Marigold<button class="addto"style="margin-left: 100px;background-color:#E57373">Add</button></P>
