--- a/flower.html
+++ b/flower.html
@@ -24,7 +24,7 @@
 
 	</nav>
 	<div id ="laaast">
-		<p>Choose The Color : </p>
+		<p>Choose The Color Of The Flower : </p>
 		<button id="colorYellow" style="background-color: yellow;font-size: 40px">Yellow</button>
 		<button id="colorPink" style="background-color: pink;font-size: 40px;margin-left: 100px">Pink</button><br><br>
 		<button id="colorWhite" style="background-color:white;font-size: 40px">White</button>
