--- a/flower.html
+++ b/flower.html
@@ -24,12 +24,13 @@
 
 	</nav>
 	<div id ="laaast">
-		<p>Choose The Color Of The Flower : </p>
-		<button id="colorYellow" style="background-color: yellow;font-size: 40px">Yellow</button>
-		<button id="colorPink" style="background-color: pink;font-size: 40px;margin-left: 100px">Pink</button><br><br>
-		<button id="colorWhite" style="background-color:white;font-size: 40px">White</button>
-		<button id="colorRed" style="background-color: red;font-size: 40px;margin-left: 113px">Red</button><br><br>
-		<button id="colorMix" style="background-color: #873AC5 ;font-size: 40px;margin-left: 145px">Mix</button>
+		<p">Choose The Color Of The Flower : </p>
+		<button id="colorYellow" style="background-color: yellow;font-size: 40px;border-radius: 20px 20px">Yellow</button>
+		<button id="colorPink" style="background-color: pink;font-size: 40px;margin-left: 100px;border-radius: 20px 20px">Pink</button><br><br>
+		<button id="colorWhite" style="background-color:white;font-size: 40px;border-radius: 20px 20px">White</button>
+		<button id="colorRed" style="background-color: red;font-size: 40px;margin-left: 113px;border-radius: 20px 20px">Red</button><br><br>
+		<button id="colorMix" style="background-color: #873AC5 ;font-size: 40px;margin-left: 145px;border-radius: 20px 20px">Mix</button><br>
+		<button id="backHome" style="background-color: #E57373;font-size: 40px;margin-left: -240px;margin-top:30px;border-radius: 25px 25px">Back</button>
 	</div>
 <!-- <div id="FlowerSelect">
 	<label id ="flowerTitel" style="font-size: 35px">Choose The Color : </label><br><br><br>
@@ -49,11 +50,11 @@
 		<ul id= "Yellow"></ul>
         <ul id= "Mix"></ul>
 	</div> -->
-	<footer id="footer"style="margin-top:-70px ">
-    	<h1>Contact Us :</h1>
-    	<h2><!-- You can call(9AM-10PM)<br> -->+962 782200715</h2>
-    	<h3>nh.yu.mo@hotmail.com</h3>
-    	<a href="file:///C:/Users/Toshiba/Desktop/solo-project-1/about-us.html"style="color:#E57373"><h4>Our Location</h4></a>
+    <footer id="footer1"style="margin-top: -120px;color: #E57373">
+    	<h1 style="margin-left: 60px">Contact Us :</h1>
+    	<h2 style="margin-left: 60px"><!-- You can call(9AM-10PM)<br> -->+962 782200715</h2>
+    	<h3 style="margin-left: 60px">nh.yu.mo@hotmail.com</h3>
+    	<a href="file:///C:/Users/Toshiba/Desktop/solo-project-1/about-us.html"style="color: #E57373"><h4>Our Location</h4></a>
     </footer>
 
 <script type="text/javascript"src="main-1-.js"></script>
