--- a/index-0-.html
+++ b/index-0-.html
@@ -24,13 +24,13 @@
 		<button id="log">log In</button>
 	</header> -->
 	<main id ="mainborder">
-        <p style="font-size:40px">Create your own flower bouquet ...</p>
+        <p style="font-size:40px;">Create your own flower bouquet ...</p>
     </main>
- <button id="start-button"style="margin-left: 550px;margin-top:80px;font-size:50px;margin-bottom:-500px ">Let's start !</button>
-    <footer id="footer1"style="margin-top: 175px">
-    	<h1>Contact Us :</h1>
-    	<h2><!-- You can call(9AM-10PM)<br> -->+962 782200715</h2>
-    	<h3>nh.yu.mo@hotmail.com</h3>
+ <button id="start-button"style="margin-left: 550px;margin-top:80px;font-size:50px;margin-bottom:-500px;background-color:#E57373 ;border-radius: 25px 25px">Let's start !</button>
+    <footer id="footer1"style="margin-top: 150px">
+    	<h1 style="margin-left: 60px">Contact Us :</h1>
+    	<h2 style="margin-left: 60px"><!-- You can call(9AM-10PM)<br> -->+962 782200715</h2>
+    	<h3 style="margin-left: 60px">nh.yu.mo@hotmail.com</h3>
     	<a href="file:///C:/Users/Toshiba/Desktop/solo-project-1/about-us.html"style="color: black"><h4>Our Location</h4></a>
     </footer>
 
