--- a/index-1-.html
+++ b/index-1-.html
@@ -17,20 +17,20 @@
 <body id="body1">
 	<header id ="header1">
 		<p style="font-size: 50px">Flower Shop</p>
-		<label>Email</label><br>
-		<input type="email" id="email"><br>
-		<label>password</label><br>
-		<input type="password" id="password"><br>
-		<button id="log">log In</button>
+		<label style="margin-left: 200px">Email</label><br>
+		<input type="email" id="email" style="margin-left: 140px"><br>
+		<label style="margin-left: 200px">password</label><br>
+		<input type="password" id="password" style="margin-left: 140px"><br>
+		<button id="log"style="background-color:#E57373 ;border-radius: 25px 25px;margin-left: 200px">log In</button>
 	</header>
 <!-- 	<main id ="mainborder">
         <p style="font-size: 40px">Create your own flower bouquet ...</p>
         <button id="start-button"style="margin-left: 275px;margin-top:20px;font-size:50px">Let's start !</button>
     </main> -->
     <footer id="footer1"style="margin-top: 100px">
-    	<h1>Contact Us :</h1>
-    	<h2><!-- You can call(9AM-10PM)<br> -->+962 782200715</h2>
-    	<h3>nh.yu.mo@hotmail.com</h3>
+    	<h1 style="margin-left: 60px">Contact Us :</h1>
+    	<h2 style="margin-left: 60px"><!-- You can call(9AM-10PM)<br> -->+962 782200715</h2>
+    	<h3 style="margin-left: 60px">nh.yu.mo@hotmail.com</h3>
     	<a href="file:///C:/Users/Toshiba/Desktop/solo-project-1/about-us.html"style="color: black"><h4>Our Location</h4></a>
     </footer>
 
