--- a/lassst.html
+++ b/lassst.html
@@ -32,14 +32,16 @@
 		<option>visa</option></select><br><br>
     <label>your phone</label><br>
     <input type="text" name=""><br><br>
-    <button  id="Save"style="margin-left: 250px;background-color:#E57373;font-size: 20px">Save</button>
+    <button  id="Save"style="margin-left: 250px;background-color:#E57373;font-size: 30px;border-radius: 25px 25px">Save</button>
+		<button id="backConfirm" style="background-color: #E57373;font-size: 30px;margin-left: -480px;margin-top:10px;border-radius: 25px 25px">Back</button>
     </div>
-	<footer id="footer"style="margin-top: -100px">
-    	<h1>Contact Us :</h1>
-    	<h2><!-- You can call(9AM-10PM)<br> -->+962 782200715</h2>
-    	<h3>nh.yu.mo@hotmail.com</h3>
-    	<a href="file:///C:/Users/Toshiba/Desktop/solo-project-1/about-us.html"style="color:#E57373"><h4>Our Location</h4></a>
+    <footer id="footer1"style="margin-top: -120px;color: #E57373">
+    	<h1 style="margin-left: 60px">Contact Us :</h1>
+    	<h2 style="margin-left: 60px"><!-- You can call(9AM-10PM)<br> -->+962 782200715</h2>
+    	<h3 style="margin-left: 60px">nh.yu.mo@hotmail.com</h3>
+    	<a href="file:///C:/Users/Toshiba/Desktop/solo-project-1/about-us.html"style="color: #E57373"><h4>Our Location</h4></a>
     </footer>
+
 
 <script type="text/javascript"src="main-1-.js"></script>
 </body>
