--- a/Gifts&Balloons.html
+++ b/Gifts&Balloons.html
@@ -38,14 +38,15 @@
     </div>
     	<div id="imgred">
 	  <ul><br><br>
-         <button class="addtooo"style="margin-left: 190px;background-color:#E57373;font-size: 30px">Skip</button>
+         <button class="addtooo"style="margin-left: 190px;background-color:#E57373;font-size: 30px;border-radius: 25px 25px">Skip</button><br>
+    <button id="backpackaging" style="background-color: #E57373;font-size: 40px;margin-left: -100px;margin-top:30px;border-radius: 25px 25px">Back</button>
       </ul>
     </div>    
-	<footer id="footer"style="margin-top: 70px">
-    	<h1>Contact Us :</h1>
-    	<h2><!-- You can call(9AM-10PM)<br> -->+962 782200715</h2>
-    	<h3>nh.yu.mo@hotmail.com</h3>
-    	<a href="file:///C:/Users/Toshiba/Desktop/solo-project-1/about-us.html"style="color:#E57373"><h4>Our Location</h4></a>
+    <footer id="footer1"style="margin-top: -120px;color: #E57373">
+      <h1 style="margin-left: 60px">Contact Us :</h1>
+      <h2 style="margin-left: 60px"><!-- You can call(9AM-10PM)<br> -->+962 782200715</h2>
+      <h3 style="margin-left: 60px">nh.yu.mo@hotmail.com</h3>
+      <a href="file:///C:/Users/Toshiba/Desktop/solo-project-1/about-us.html"style="color: #E57373"><h4>Our Location</h4></a>
     </footer>
 
 <script type="text/javascript"src="main-1-.js"></script>
