--- a/the-gift.html
+++ b/the-gift.html
@@ -27,16 +27,18 @@
 	 <div id="imgred">
 	  <ul><br><br>
         <img id ="mouseon" src="https://images.squarespace-cdn.com/content/v1/5b3bb88955b02ca270fb853b/1550153324331-DIKM5B1ZT5MH7JXYH252/ke17ZwdGBToddI8pDm48kK60W-ob1oA2Fm-j4E_9NQB7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z4YTzHvnKhyp6Da-NYroOW3ZGjoBKy3azqku80C789l0kD6Ec8Uq9YczfrzwR7e2Mh5VMMOxnTbph8FXiclivDQnof69TlCeE0rAhj6HUpXkw/ZKu0MxPGTBa%2B9lgv1a%2BkpQ.jpg?format=750w"style="width: 450px;height: 450px">
-        <P style ="margin-left: 150px;font-size: 20px"><button id="addtoooo"style="margin-left: 40px;background-color:#E57373;font-size: 30px;margin-top: 80px">Finish</button></P>
+        <P style ="margin-left: 150px;font-size: 20px"><button id="addtoooo"style="margin-left: 40px;background-color:#E57373;font-size: 30px;margin-top: 80px;border-radius: 25px 25px">Confirm</button></P>
+		<button id="backballoons" style="background-color: #E57373;font-size: 40px;margin-left: -200px;margin-top:-100px;border-radius: 25px 25px">Back</button>
       </ul>
     </div>
 
-	<footer id="footer"style="margin-top: 50px">
-    	<h1>Contact Us :</h1>
-    	<h2><!-- You can call(9AM-10PM)<br> -->+962 782200715</h2>
-    	<h3>nh.yu.mo@hotmail.com</h3>
-    	<a href="file:///C:/Users/Toshiba/Desktop/solo-project-1/about-us.html"style="color:#E57373"><h4>Our Location</h4></a>
+    <footer id="footer1"style="margin-top: -120px;color: #E57373">
+    	<h1 style="margin-left: 60px">Contact Us :</h1>
+    	<h2 style="margin-left: 60px"><!-- You can call(9AM-10PM)<br> -->+962 782200715</h2>
+    	<h3 style="margin-left: 60px">nh.yu.mo@hotmail.com</h3>
+    	<a href="file:///C:/Users/Toshiba/Desktop/solo-project-1/about-us.html"style="color: #E57373"><h4>Our Location</h4></a>
     </footer>
+
 
 <script type="text/javascript"src="main-1-.js"></script>
 </body>
