--- a/flower.html
+++ b/flower.html
@@ -25,11 +25,11 @@
 	</nav>
 	<div id ="laaast">
 		<p">Choose The Color Of The Flower : </p>
-		<button id="colorYellow" style="background-color: yellow;font-size: 40px;border-radius: 20px 20px">Yellow</button>
-		<button id="colorPink" style="background-color: pink;font-size: 40px;margin-left: 100px;border-radius: 20px 20px">Pink</button><br><br>
+		<button id="colorYellow" style="background-color: #FFE338;font-size: 40px;border-radius: 20px 20px">Yellow</button>
+		<button id="colorPink" style="background-color: #FFC0CB;font-size: 40px;margin-left: 100px;border-radius: 20px 20px">Pink</button><br><br>
 		<button id="colorWhite" style="background-color:white;font-size: 40px;border-radius: 20px 20px">White</button>
-		<button id="colorRed" style="background-color: red;font-size: 40px;margin-left: 113px;border-radius: 20px 20px">Red</button><br><br>
-		<button id="colorMix" style="background-color: #873AC5 ;font-size: 40px;margin-left: 145px;border-radius: 20px 20px">Mix</button><br>
+		<button id="colorRed" style="background-color:#9A0000;font-size: 40px;margin-left: 113px;border-radius: 20px 20px">Red</button><br><br>
+		<button id="colorMix" style="background-color:#4D0092 ;font-size: 40px;margin-left: 145px;border-radius: 20px 20px">Mix</button><br>
 		<button id="backHome" style="background-color: #E57373;font-size: 40px;margin-left: -240px;margin-top:30px;border-radius: 25px 25px">Back</button>
 	</div>
 <!-- <div id="FlowerSelect">
