--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
 	<select style="font-size: 20px">
 		<option>Birthday</option>
 		<option>New Baby</option>
-		<option>Get Will Soon</option>
+		<option>Get Well Soon</option>
 		<option>I'm Sorry</option>
 		<option>Thank You</option>
 		<option>For Him</option>
