--- a/lassst.html
+++ b/lassst.html
@@ -29,7 +29,7 @@
     <label>how you want to pay </label><br>
     <select style="margin-left: 10px">	
     	<option>chash</option>
-		<option>visa</option></select><br><br>
+		<option>Card</option></select><br><br>
     <label>your phone</label><br>
     <input type="text" name=""><br><br>
     <button  id="Save"style="margin-left: 250px;background-color:#E57373;font-size: 30px;border-radius: 25px 25px">Save</button>
